[package]
name = "myuzik"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
colored = "2.0"
rustyline = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
tempfile = "3.2"